fix row alignment

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1864,9 +1864,9 @@ img.logo {
   font-size: 1.1rem!important;
 }
 
-.widget-HeaderCell__value {
-  text-align: center;
-}
+// .widget-HeaderCell__value {
+//   text-align: center;
+// }
 
 .react-grid-HeaderCell{
   background-color: #7A9BB0;
